terraformAnsible/routetables.tf
resource "aws_route_table" "public_subnet_routeTable" {
  vpc_id = aws_vpc.vpc_demo.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "terraformAnsible"
  }
}
